0.8.0 - currently working on
- [#4739] Bugfix: Test error in tx_oelib_DataMapperTest
- [#4740] Bugfix: Test error in tx_oelib_ModelTest
- [#4732] Bugfix: For 1:n relations, the second related model gets marked as deleted
- [#4686] Feature: Add FrontEndUser.setCompany (thanks to Tomas Norre Mikkelsen)
- [#4673] Bugfix: Re-add DataMapper::cacheModelByCombinedKeys
- [#4604] Feature: Add model caching by compound keys
- [#4626] Cleanup: Fix all instances of "Missing function doc comment"
- [#4647] Cleanup: Deprecate TemplateHelper::pi_getPidList
- [#4625] Cleanup: Fix all instances of "Underscores are not allowed in method names"
- [#4643] Cleanup: Make the Time class abstract
- [#4631] Cleanup: Drop useless class comments
- [#4630] Cleanup: Update the copyright to 2013
- [#4623] Cleanup: Fix all instances of "Missing @return tag in function comment"
- [#4600] Fix: Test failure tx_oelib_SalutationSwitcherTest
- [#4594] Fix: Google map coordinates are using a decimal comma if the PHP locale is not set correctly
- [#2671] Feature: Add model::isEmpty
- [#4591] Fix: Session::setInstance must be static
- [#3996] Fix: Two tests of the templatehelperchild testcase fail
- [#4501] Cleanup: Document the different return types of the mailer factory
- [#4502] Cleanup: Document the different return types of the header proxy factory
- [#4499] Cleanup: Document that LoginManager::LoginUser also may accept NULL
- [#4485] Fix: Add TYPO3 (and extbase) maximum version to ext_emconf.php
- [#4444] Feature: Add a FederalState model and mapper
- [#4454] Fix: Test failures concerning the images in the current Core master
- [#3451] Cleanup: Use TYPO3's autoloader instead of oelib's autoloader
- [#4278] Cleanup: Update the copyright to 2012
- [#4452] Cleanup: Stop using the DATABASE_QUERY_ERROR and DATABASE_RESULT_ERROR constants
- [#4448] Fix: createRestrictedImage fails with latest Core master
- [#4449] Fix: tx_oelib_Object::__destruct must not be abstract
- [#4352] Change: Require PHP 5.3