@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4741] Bugfix: Exception in deleteDummyFolderWithNonEmptyDummyFolderThrowsException
 - [#4739] Bugfix: Test error in tx_oelib_DataMapperTest
 - [#4740] Bugfix: Test error in tx_oelib_ModelTest
 - [#4732] Bugfix: For 1:n relations, the second related model gets marked as deleted
